iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_join_wrong_delimiter_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected string, found object @ example-templates/errors/join-wrong-delimiter-type.yaml:6:19 (errno: IY5001)
  -> data type mismatch

   5 | 
   6 | test_join: !$join [!$ wrong_delimiter, ["hello", "world"]]
     |                   ^^^^^^^^ expected string

   expected string, found object
   try using !$toJsonString or !$toYamlString to serialize the object

   For more info: iidy explain IY5001
