iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_line_number_test.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: 'template' missing in !$mapListToHash tag @ example-templates/errors/line-number-test.yaml:26:11 (errno: IY4002)
  -> add 'template' field to !$mapListToHash tag

  25 |       Value: !$toJsonString
  26 |         - !$mapListToHash
  27 |             items: !$ data

   example:
   !$mapListToHash
     items: [{"key": "a", "value": 1}, {"key": "b", "value": 2}]
     keyPath: key
     valuePath: value
   For more info, run: iidy explain IY4002
