iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_map_wrong_items_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected sequence, found string @ example-templates/errors/map-wrong-items-type.yaml:2:16 (errno: ERR_5001)
  -> data type mismatch

   1 | # !$map with wrong items type error - items should be array, not string
   2 | test_map: !$map
   3 |   items: "not_an_array"

   expected sequence, found string

   For more info: iidy explain ERR_5001
