iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_merge_missing_sources.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: must be a sequence of objects to merge @ example-templates/errors/merge-missing-sources.yaml:2:13 (errno: IY4002)
  -> use format: [object1, object2, ...]

   1 | # !$merge with missing sources field
   2 | test_merge: !$merge

   example:
   !$merge
     - {key1: value1}
     - {key2: value2}
     - {key3: value3}
   For more info, run: iidy explain IY4002
