iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_merge_source_wrong_type.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected object, found string @ example-templates/errors/merge-source-wrong-type.yaml:2:20 (errno: IY5001)
  -> data type mismatch

   1 | # !$merge with source that's not a mapping
   2 | test_merge: !$merge
   3 |   - key1: value1

   expected object, found string
   try using !$parseJson or !$parseYaml to parse the string

   For more info: iidy explain IY5001
