iidy/tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_mergemap_wrong_template_item.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Type error: expected object, found string @ example-templates/errors/mergemap-wrong-template-item.yaml:2:23 (errno: IY5001)
  -> data type mismatch

   1 | # !$mergeMap with template that produces invalid items
   2 | test_mergemap: !$mergeMap
     |                       ^^^ expected object
   3 |   items: [1, 2, 3]

   expected object, found string
   try using !$parseJson or !$parseYaml to parse the string

   For more info: iidy explain IY5001
